--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
@@ -23,18 +22,7 @@
             android:maxLines="1"
             android:padding="8dp"
             android:text="@string/title"
-            android:textAppearance="@style/TextAppearance.AppCompat"
-         />
-
-
-
-
-
-
-
-
-
-
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
 
     </RelativeLayout>
