--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -1,49 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NoteActivity">
+    <include
+        android:id="@+id/toolBar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+
+
+    <!--    <TextView-->
+<!--        android:id="@+id/creation_date_textview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="32dp"-->
+<!--        android:gravity="start"-->
+<!--        android:hint="@string/creation_date"-->
+<!--        android:padding="12dp"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/editxt_title_view" />--><![CDATA[
+
+    />
+
+
+
+
+
+    ]]>
 
     <EditText
         android:id="@+id/editxt_title_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
         android:background="@null"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:textSize="20sp"
         android:hint="@string/title"
+        android:maxLines="1"
+        android:padding="10dp"
+        android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat"
-         />
-
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
     <EditText
         android:id="@+id/edittxt_description"
-        android:background="@null"
-        android:padding="8dp"
         android:layout_width="match_parent"
-        android:scrollbars="vertical"
-        android:layout_height="match_parent"
-        android:layout_below="@id/editxt_title_view"
-        android:layout_alignParentTop="true"
-        android:clipToPadding="false"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="61dp"
+        android:layout_height="600dp"
+        android:layout_marginTop="60dp"
         android:gravity="start"
         android:hint="@string/body"
         android:textAlignment="textStart"
         android:textSize="20sp"
- />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editxt_title_view" />
 
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
