--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#292929</color>
     <color name="colorPrimaryDark">#434243</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFF</color>
