added dark theme

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="260dp"
-    app:cardElevation="3dp"
     android:layout_marginStart="6dp"
     android:layout_marginTop="6dp"
     android:layout_marginEnd="6dp"
     android:layout_marginBottom="6dp"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    app:cardElevation="3dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
+        android:layout_height="match_parent"
+      >
         <TextView
             android:id="@+id/title_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:textColor="@color/textColor"
+
             android:ellipsize="end"
             android:fontFamily="sans-serif-black"
-            android:layout_margin="3dp"
             android:maxLines="1"
-            android:padding="8dp"
-             android:text="Title"
+            android:padding="10dp"
+            android:text="Title"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,53 +35,54 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-<!--        <View-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="1dp"-->
-<!--            android:layout_marginTop="4dp"-->
-<!--            android:background="@color/colorAccent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="0.0"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/title_text_view" />-->
+        <!--        <View-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="1dp"-->
+        <!--            android:layout_marginTop="4dp"-->
+        <!--            android:background="@color/colorAccent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintHorizontal_bias="0.0"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/title_text_view" />-->
+
 
         <TextView
             android:id="@+id/creationUpdateDate_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="8dp"
+            android:textColor="@color/textColor"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
             android:ellipsize="end"
             android:maxLines="4"
             android:text="March 2020"
-            android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.958" />
-
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ToggleButton
             android:layout_width="32dp"
             android:layout_height="23dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/selector"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/toggleheartbtn"
             android:textOff=""
             android:textOn=""
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/description_text_view"
+            android:textColor="@color/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="3dp"
             android:ellipsize="end"
             android:maxLines="7"
-            android:textStyle="normal"
-            android:padding="8dp"
+            android:padding="10dp"
             android:text="Body"
             android:textSize="16sp"
+            android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
