--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NoteActivity">
+    tools:context=".NoteActivity"
+    >
+
     <include
         android:id="@+id/toolBar"
         layout="@layout/toolbar"
@@ -13,38 +15,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-    <!--    <TextView-->
-<!--        android:id="@+id/creation_date_textview"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:gravity="start"-->
-<!--        android:hint="@string/creation_date"-->
-<!--        android:padding="12dp"-->
-<!--        android:textSize="20sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/editxt_title_view" />--><![CDATA[
-
-    />
-
-
-
-
-
-    ]]>
-
     <EditText
         android:id="@+id/editxt_title_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:backgroundTint="@color/colorAccent"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
-        android:background="@null"
         android:ellipsize="end"
         android:hint="@string/title"
         android:maxLines="1"
@@ -61,10 +40,12 @@
     <EditText
         android:id="@+id/edittxt_description"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="660dp"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="3dp"
         android:gravity="start"
         android:hint="@string/body"
+        android:padding="5dp"
         android:textAlignment="textStart"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
