--- a/app/src/main/res/menu/add_note.xml
+++ b/app/src/main/res/menu/add_note.xml
@@ -4,8 +4,9 @@
 <item
     android:id="@+id/save_note"
     app:showAsAction="ifRoom"
-    android:icon="@drawable/ic_save"
-    android:title="Save"/>
+    android:icon="@drawable/ic_baseline_check_24"
+    android:title="Save"
+   />
 
 
 
