--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#292929</color>
-    <color name="colorPrimaryDark">#434243</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="white">#FFF</color>
-    <color name="grey">#CCCCCC</color>
-    <color name="black">#000000</color>
+    <color name="colorPrimary">#fa9005</color>
+    <color name="colorPrimaryDark">#c16200</color>
+    <color name="colorAccent">#056ffa </color>
+    <color name="colorPrimaryLight">#FFC107</color>
+
+
+ colors for normal/ day mode
+
+    <color name="textColor">#000</color>
+    <color name="backgroundColor">#fcfcfc</color>
+
+
+
+
+
+
+
+
 </resources>
